Split files 001, 0002, 000x regression
VLC 1.1 could play splitted files.
In 2.0.x, it cannot.
Should we do it in a stream filter or back in the core, like in the past?
See http://forum.videolan.org/viewtopic.php?f=14&t=102728&view=unread#p348489
Activity
-
Newest first Oldest first
-
Show all activity Show comments only Show history only
- Jean-Baptiste Kempf added Component::Core: Input Severity::normal Type::bug Version::master git + 1 deleted label
added Component::Core: Input Severity::normal Type::bug Version::master git + 1 deleted label
- Jean-Baptiste Kempf changed milestone to %Bugs paradize
changed milestone to %Bugs paradize
- Jean-Baptiste Kempf assigned to @jbk and unassigned @fenrir
- Jean-Baptiste Kempf changed milestone to %2.1 features
changed milestone to %2.1 features
- Author Owner
Ok, so the interesting thing is that it works in 2.0.5 and 2.1.0 on linux and Mac.
So, this is a Win32 only issue.
- Jean-Baptiste Kempf added Difficulty::hard label and removed 1 deleted label
added Difficulty::hard label and removed 1 deleted label
- Author Owner
So, the issue appears in InputGetExtraFilesPattern() in src/input/input.c, where the vlc_stat( psz_file, &st ) fails.
- Author Owner
In fact, it fails because it passes /C:/Users/jb/mkv_split.001 to vlc_stat() and therefore to _wstati64 and not C:\Users\jb\mkv_split.001
Which is why it fails only on Win32
- Author Owner
The issue, is, of course, the first '/'
- Author Owner
- Author Owner
Tentative patch
- Jean-Baptiste Kempf added Type::patch label and removed Type::bug label
added Type::patch label and removed Type::bug label
- Author Owner
Patch is wrong, of course. Better one pushed
commit 95dac995 Author: Jean-Baptiste Kempf jb@videolan.org Date: Wed Dec 5 23:35:05 2012 +0100
Fix support of .00x splitted files on Win32 Close [#7292](https://code.videolan.org/videolan/vlc/-/issues/7292)
Original author: jb@videolan.org
- Migration Bot added Status::fixed label
added Status::fixed label
- Migration Bot closed
closed