Fix support of .00x splitted files on Win32

Close #7292